crates/parser/tests/fixtures/bad/circular_include_b.dl
.include "circular_include_a.dl"
